cabal-version:      3.0
name:               gigi-intermediate-representation
version:            0.1.0.0
synopsis: A Lisp adjacent functional programming language.

license:            MIT
license-file:       LICENSE
author:             ellos0
maintainer:         mcgibbonellott@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Gir
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4
    hs-source-dirs:   src
    default-language: Haskell2010
